src/objects/GVS_PicklistValue__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GVS_Picklist__c</fullName>
        <label>Picklist</label>
        <referenceTo>GVS_Picklist__c</referenceTo>
        <relationshipLabel>Picklist Values</relationshipLabel>
        <relationshipName>PicklistValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GlobalValueSetLabel__c</fullName>
        <formula>GVS_Picklist__r.Label__c</formula>
        <label>Global Value Set Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalValueSetName__c</fullName>
        <formula>GVS_Picklist__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Value Set Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalValueSet__c</fullName>
        <formula>GVS_Picklist__r.GlobalValueSet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Value Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalLabel__c</fullName>
        <label>Original Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GVS - Picklist Value</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Picklist Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GVS - Picklist Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>